--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
   <body>
     <header>
@@ -56,8 +57,41 @@
         <div class="p-4">
           <h5>Laura</h5>
           <p>Bienvenido,Soy Tiger...</p>
+          <hr>
+          <p class="text-start">Hola como estas</p>
+          <p class="text-end text-primary fw-bold">bien</p>
+          <div class="textoChat">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-8">
+                  <input type="text" class="form-control my-3" id="textoChat">
+                </div>
+                <div class="col-4 mt-3">
+                <i class="bi bi-send-fill fs-3"></i>
+              </div>
+              </div>
+            </div>
         </div>
       </div>
+      </div>
+      <section class="container-fluid">
+        <div class="row">
+          <div class="col-12 my-5">
+            <img src="./assets/img/sura.webp" alt="foto" class="img-fluid">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <h3>TITULO</h3>
+            <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, ratione similique quis totam inventore officiis fuga aspernatur provident, facilis obcaecati quia expedita qui ab est hic, suscipit deserunt mollitia ea dolor animi praesentium. Earum nemo voluptates, qui repellendus soluta nostrum pariatur atque ducimus odio numquam dolor modi harum laborum velit.</P>
+          </div>
+          <div class="col-6">
+            <h3>TITULO</h3>
+            <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, ab aperiam sunt libero nemo blanditiis, nesciunt possimus tempore expedita, dolore inventore dicta assumenda quia odit beatae itaque quas ea? Quod, architecto maxime? Fugit esse ipsum ipsa, eveniet tempora laudantium incidunt vero possimus quasi porro consequatur debitis, corporis suscipit, deserunt labore!</P>
+          
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <script
@@ -66,5 +100,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./src/controllers/controlador.js"></script>
+    
   </body>
 </html>
